# amy-csv

./: LICENSE  README.md  amy-csv.cabal
src/Data/CSV/: Analyse.hs  BatchAverage.hs  Condense.hs
